# Simple_Terminal_Edit

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Editor.h  File_Handler.h  Info_Bar.h
lib/: Editor.cpp  File_Handler.cpp
